; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_falcon.c__nouveau_falcon_wr32.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_falcon.c__nouveau_falcon_wr32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_object = type { i32 }
%struct.nouveau_falcon = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_nouveau_falcon_wr32(%struct.nouveau_object* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.nouveau_object*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.nouveau_falcon*, align 8
  store %struct.nouveau_object* %0, %struct.nouveau_object** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.nouveau_object*, %struct.nouveau_object** %4, align 8
  %9 = bitcast %struct.nouveau_object* %8 to i8*
  %10 = bitcast i8* %9 to %struct.nouveau_falcon*
  store %struct.nouveau_falcon* %10, %struct.nouveau_falcon** %7, align 8
  %11 = load %struct.nouveau_falcon*, %struct.nouveau_falcon** %7, align 8
  %12 = load %struct.nouveau_falcon*, %struct.nouveau_falcon** %7, align 8
  %13 = getelementptr inbounds %struct.nouveau_falcon, %struct.nouveau_falcon* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* %5, align 8
  %16 = add nsw i64 %14, %15
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @nv_wr32(%struct.nouveau_falcon* %11, i64 %16, i32 %17)
  ret void
}

declare dso_local i32 @nv_wr32(%struct.nouveau_falcon*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
